--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "nested-dragable",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Wang9977 <491988016@qq.com>",
-  "private": true,
+  "author": "Wang9977",
+  "license": "ISC",
+  "private": false,
   "scripts": {
     "serve": "set NODE_OPTIONS=--openssl-legacy-provider & vue-cli-service serve",
     "start": "npm run serve",
@@ -11,32 +12,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@micro-zoe/micro-app": "^0.8.5",
     "@vue/composition-api": "^1.4.2",
     "axios": "^0.20.0",
     "babel-plugin-component": "^1.1.1",
-    "clipboard": "^2.0.6",
     "core-js": "^3.25.4",
-    "cross-env": "^7.0.3",
-    "dayjs": "^1.10.4",
-    "echarts": "^4.9.0",
     "element-ui": "^2.14.0",
-    "file-saver": "^2.0.2",
-    "fuse.js": "6.4.3",
-    "increase-memory-limit": "^1.0.7",
-    "js-cookie": "^2.2.1",
-    "js-file-download": "^0.4.12",
-    "js-shortid": "^0.1.1",
-    "jszip": "^3.5.0",
     "lodash": "^4.17.20",
-    "lodash.groupby": "^4.6.0",
-    "mitt": "^3.0.0",
-    "normalize.css": "^8.0.1",
-    "nprogress": "^0.2.0",
-    "path-to-regexp": "^6.2.0",
-    "register-service-worker": "^1.7.1",
-    "screenfull": "^5.0.2",
-    "v-click-outside-x": "^4.1.3",
     "vue": "2.6.14",
     "vue-class-component": "^7.2.6",
     "vue-count-to": "^1.0.13",
@@ -51,16 +32,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.17.12",
-    "@types/clipboard": "^2.0.1",
     "@types/echarts": "^4.9.0",
-    "@types/file-saver": "^2.0.1",
     "@types/jest": "^26.0.15",
-    "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.165",
     "@types/lodash.groupby": "^4.6.6",
     "@types/node": "^14.14.6",
-    "@types/nprogress": "^0.2.0",
-    "@types/vue-splitpane": "^1.0.1",
     "@types/webpack-env": "^1.15.3",
     "@vue/cli-plugin-babel": "^4.5.8",
     "@vue/cli-plugin-eslint": "4.5.8",
