--- a/package.json
+++ b/package.json
@@ -1,52 +1,42 @@
 {
-  "name": "nested-dragable",
+  "name": "nested-draggable",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Wang9977",
   "license": "ISC",
   "private": false,
+  "main": "dist/nested-dragable.umd.min.js",
+   "files": [
+        "dist",
+        "src"
+    ],
   "scripts": {
     "serve": "set NODE_OPTIONS=--openssl-legacy-provider & vue-cli-service serve",
     "start": "npm run serve",
     "lint": "vue-cli-service lint",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lib": "vue-cli-service build --target lib ./src/components/index.js"
   },
   "dependencies": {
     "@vue/composition-api": "^1.4.2",
-    "axios": "^0.20.0",
     "babel-plugin-component": "^1.1.1",
     "core-js": "^3.25.4",
     "element-ui": "^2.14.0",
     "lodash": "^4.17.20",
     "vue": "2.6.14",
-    "vue-class-component": "^7.2.6",
-    "vue-count-to": "^1.0.13",
-    "vue-demi": "^0.13.11",
-    "vue-i18n": "^8.22.1",
-    "vue-property-decorator": "^9.0.2",
-    "vue-router": "3.4.9",
-    "vue-svgicon": "^3.2.9",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.5.1",
     "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.17.12",
-    "@types/echarts": "^4.9.0",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.165",
-    "@types/lodash.groupby": "^4.6.6",
-    "@types/node": "^14.14.6",
     "@types/webpack-env": "^1.15.3",
     "@vue/cli-plugin-babel": "^4.5.8",
     "@vue/cli-plugin-eslint": "4.5.8",
-    "@vue/cli-plugin-pwa": "4.5.8",
-    "@vue/cli-plugin-router": "^4.5.8",
     "@vue/cli-plugin-unit-jest": "^4.5.8",
-    "@vue/cli-plugin-vuex": "^4.5.8",
     "@vue/cli-service": "^4.5.8",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/test-utils": "^1.1.1",
     "babel-loader": "^8.1.0",
     "eslint": "6.2.2",
     "eslint-plugin-import": "^2.22.1",
