--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nested-dragable",
+  "name": "nested-draggable",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Wang9977",
@@ -22,7 +22,6 @@
     "vue-class-component": "^7.2.6",
     "vue-count-to": "^1.0.13",
     "vue-demi": "^0.13.11",
-    "vue-i18n": "^8.22.1",
     "vue-property-decorator": "^9.0.2",
     "vue-router": "3.4.9",
     "vue-svgicon": "^3.2.9",
